[tool.poetry]
name = "inst-api"
version = "0.3.0"
description = "InstAPI - comfortable and easy to use Python's library for interaction with Instagram"
authors = ["Yurii Karabas <1998uriyyo@gmail.com>"]
packages = [
    { include = "instapi" }
]

license = "MIT"
readme = "README.md"
repository = "https://github.com/uriyyo/instapi"

classifiers = [
    'Operating System :: OS Independent',
    'Programming Language :: Python',
    'Programming Language :: Python :: 3',
    'Programming Language :: Python :: 3.7',
    'Programming Language :: Python :: 3.8',
    'Programming Language :: Python :: 3.9',
    'Programming Language :: Python :: 3 :: Only',
]

[tool.poetry.dependencies]
python = "^3.7"
instagram-private-api = "^1.6.0"
requests = ">=2.24.0" # TODO: replace with httpx
pillow = { version = ">=7.2.0", optional = true }

[tool.poetry.dev-dependencies]
pytest = "^7.1.3"
black = "^22.8"
pre-commit = "^2.20.0"
pytest-mock = "^3.10.0"
pytest-cov = "^4.0.0"

[tool.poetry.extras]
pillow = [
    "pillow",
]

[tool.black]
line-length = 100
target-version = ['py37']
include = '\.pyi?$'
exclude = '''
(
  /(
      \.eggs         # exclude a few common directories in the
    | \.git          # root of the project
    | \.hg
    | \.mypy_cache
    | \.tox
    | \.venv
    | _build
    | buck-out
    | build
    | dist
  )/
)
'''

[build-system]
requires = ["poetry>=0.12"]
build-backend = "poetry.masonry.api"