[metadata]
name = instapi
version = 0.0.1
author = Yurii Karabas

[options]
include_package_data = true
packages =
    instapi
    instapi.models

install_requires =
    dataclasses==0.6.0
    instagram-private-api==1.6.0.0
    Pillow==6.1.0
    requests==2.22.0

[options.extras_require]
testing =
    pytest==5.1.2
    pytest-mock==1.10.4
    pytest-cov==2.7.1
    mypy==0.720

